Pull up creation of CoAP endpoints into distinct factory class
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>